--- a/frontend/public/components/_vert-nav.scss
+++ b/frontend/public/components/_vert-nav.scss
@@ -39,8 +39,8 @@ $min-height: 200px;
   margin: 0;
   text-align: center;
   display: block;
-  font-size: 20px;
-  padding: 7px;
+  font-size: 18px;
+  padding: 5px 7px;
 
   &.co-m-vert-nav-item--active a {
     color: $color-highlight-blue;
