--- a/frontend/public/components/_cluster-picker.scss
+++ b/frontend/public/components/_cluster-picker.scss
@@ -1,9 +1,9 @@
 .cluster-picker {
   background-color: $color-os-nav-active;
-  border-radius: 3px;
+  border-radius: 1px;
   color: $color-os-nav-title;
   margin: 0 10px;
-  padding-left: 10px;
+  padding: 2px 0 2px 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 
   .dropdown {
@@ -15,11 +15,22 @@
       .caret {
         position: absolute;
         right: 9px;
-        top: 9px;
+        top: 6px;
       }
     }
-    ul.dropdown-menu > li > a:hover {
-      background-color: #2A2E34;
+    ul.dropdown-menu {
+      box-shadow: 0 2px 4px rgba(0,0,0,0.175);
+      margin-left: -10px;
+      min-width: 200px;
+      > li {
+        &.active > a {
+          background-color: $color-os-nav-active !important;
+          border-color: transparent !important;
+        }
+        > a:hover {
+          background-color: $color-os-nav-hover;
+        }
+      }
     }
   }
 }
