--- a/frontend/public/components/_detail-table.scss
+++ b/frontend/public/components/_detail-table.scss
@@ -46,6 +46,7 @@
   &__breakdown {
     display: flex;
     flex-direction: column;
+    font-size: 14px;
     justify-content: space-between;
     height: $bracket-height - 1px;
     text-align: left;
