--- a/frontend/public/components/_resource-dropdown.scss
+++ b/frontend/public/components/_resource-dropdown.scss
@@ -5,33 +5,11 @@
     width: 40px;
   }
 
-  .btn--dropdown {
-    padding: 8px 20px 7px 5px;
+  .dropdown .btn {
+    margin-right: -2px;
   }
 
   .dropdown-menu a {
-    padding: 8px 20px 7px 4px;
+    padding: 4px 20px 4px 6px;
   }
-}
-
-.right-grouped button {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-  margin-right: 0;
-  min-height: 34px;
-}
-
-.left-grouped button {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-  min-height: 34px;
-}
-
-.co-m-selector-input .tags {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-
-  // Match the type selector dropdown button style
-  border: none;
-  box-shadow: inset 0 1px 0px rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.25), 0 0px 1px rgba(0, 0, 0, 0.25);
 }
