--- a/frontend/public/components/_resource.scss
+++ b/frontend/public/components/_resource.scss
@@ -2,6 +2,7 @@ $height: 18px;
 
 .co-m-resource-icon {
   display: inline-block;
+  font-size: $font-size-base - 1;
   text-align: center;
   border-radius: 10px;
   height: $height;
@@ -9,7 +10,6 @@ $height: 18px;
   padding: 0 4px;
   line-height: $height;
   color: #fff;
-  font-size: 12px;
   margin: 0 4px;
   background-color: $color-container-dark;
 }
