--- a/frontend/public/components/utils/_label.scss
+++ b/frontend/public/components/utils/_label.scss
@@ -6,11 +6,11 @@ $height: 18px;
   max-width: 100%;
   border-radius: 10px;
   padding: 0px 8px;
-  font-size: $co-font-size-small;
   height: $height;
   line-height: $height;
   margin: 1px;
   background-color: $color-grey-background;
+  font-size: $font-size-base;
   font-weight: 400;
   border: solid 1px $color-grey-border;
 
