--- a/frontend/public/style/_overrides.scss
+++ b/frontend/public/style/_overrides.scss
@@ -16,34 +16,9 @@ small {
   cursor: auto;
 }
 
-.co-m-page-title {
-  margin: 0;
-  padding: 30px 10px;
-  line-height: 26px;
-  color: black;
-  font-weight: 400;
-  letter-spacing: -.03em;
-  font-size: 26px;
-  // need the extra specifity :(
-  .co-m-page-title__icon {
-    min-width: 24px;
-    font-size: 18px;
-    border-radius: 12px;
-    height: 24px;
-    line-height: 24px;
-    position: relative;
-    padding: 0 7px;
-    top: -2px;
-  }
-}
-
 .text-filter {
   width: 250px;
   min-width: 150px;
-}
-.co-m-page-title__obj {
-  font-size: 14px;
-  letter-spacing: 0px;
 }
 
 .co-m-pane__body {
@@ -90,18 +65,21 @@ tags-input .host:active {
 }
 
 tags-input .tags {
-  padding: 6px 12px 3px 6px;
   overflow: hidden;
   word-wrap: break-word;
   cursor: text;
-  background-color: white;
-  border: 1px solid #CCC;
-  border-radius: 4px;
-  min-height: 34px;
-  font-size: 14px;
-  line-height: 1.42857;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  transition: border-color ease-in-out 0.15s;
+  // Style to look like .form-control
+  height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+  padding: $padding-base-vertical $padding-base-horizontal;
+  font-size: $font-size-base;
+  line-height: $line-height-base;
+  color: $input-color;
+  background-color: $input-bg;
+  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+  border: 1px solid $input-border;
+  border-radius: $input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
+  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
 }
 .modal-body tags-input .tags {
   min-height: 200px;
@@ -150,11 +128,9 @@ tags-input .remove-button:hover {
 tags-input .tags .input {
   border: 0;
   outline: none;
-  margin: 2px;
   padding: 0;
   float: left;
-  //keeps placeholder same size as tag's text
-  font-size: $co-font-size-small;
+  height: ($input-height-base - ($padding-base-vertical * 2) - 2);
 }
 tags-input .tags .input.invalid-tag {
   color: $red-invalid;
@@ -215,17 +191,18 @@ tags-input .autocomplete .suggestion-item em {
   cursor: pointer;
 }
 
-.co-m-message {
-  a {
-    color: white;
-    text-decoration: underline;
-    &:hover, &:focus, &:active, &:focus:active {
-      color: white;
-      text-decoration: underline;
-    }
-  }
+// account for collapsing space between .btn
+.btn + .btn {
+  margin-left: 3px;
 }
 
-.co-m-message--success {
-  background-color: $color-green-success;
+.breadcrumb {
+  font-size: 10px;
+  margin-bottom: 0;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
+.modal-footer .alert {
+  text-align: left;
 }
