--- a/frontend/public/style/_vars.scss
+++ b/frontend/public/style/_vars.scss
@@ -43,7 +43,6 @@ $color-red-error: #D64456;
 $color-green-success: #2fc98e;
 $color-orange-warning: #fca657;
 
-$color-link: #458AC8;
 $color-highlight-blue: #52a3d9;
 $color-highlight-blue-dark: #2276AD;
 
@@ -57,8 +56,6 @@ $z-plane-2: 200;
 $z-plane-3: 300;
 $z-plane-4: 400;
 
-$co-font-size-small: 13px;
-
 $color-tectonic-dark-blue: #154A6D;
 $color-tectonic-dark-blue-hover: #19547B;
 $color-tectonic-darkest-blue: #0A2C41;
@@ -71,3 +68,4 @@ $color-os-nav-title: #d1d1d1;
 $color-os-nav-background: #2A2E34;
 $color-os-nav-item-seperator: #050505;
 $color-os-nav-active: #383f47;
+$color-os-nav-hover: lighten($color-os-nav-active, 8%)
