Add omitted Bootstrap-sass partial to fix search bug

--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -16,6 +16,7 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/labels";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/list-group";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/close";
