Increase contrast of fonts. Use black instead of dark gray for body fonts. Use #777 for muted text instead of #999.

--- a/frontend/public/components/graphs/graphs.scss
+++ b/frontend/public/components/graphs/graphs.scss
@@ -8,7 +8,7 @@
 .graph-title {
   margin: 0;
   text-align: center;
-  color: #444;
+  color: black;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
