Override patternfly's font weight for headers. Fixes an issue where header text was absurdly thin.

--- a/frontend/public/style/_overrides.scss
+++ b/frontend/public/style/_overrides.scss
@@ -4,8 +4,12 @@
    rather than overriding or bringing in built assets.
    The coreos-web project is no longer actively maintained */
 
-.text-muted {
-  color: $color-text-muted;
+// override patternfly's extra thin font weight for headers
+h1,
+.h1,
+h2,
+.h2 {
+  font-weight: normal;
 }
 
 small {
