Make react-lightweight-tooltip styles better match PatternFly

--- a/frontend/public/components/_dropdown.scss
+++ b/frontend/public/components/_dropdown.scss
@@ -7,7 +7,7 @@ $color-bookmarker: #DDD;
 }
 
 .dropdown__disabled {
-  color: #666;
+  color: $dropdown-link-disabled-color;
   cursor: not-allowed;
 }
 
